--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-custom-scrollbars-2": "^4.4.0",
     "react-dom": "^18.0.0",
     "react-helmet-async": "^1.2.3",
+    "react-notifications": "^1.7.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "save-dev": "^0.0.1-security",
