--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "ispeak-client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
@@ -14,6 +13,7 @@
     "@mui/lab": "^5.0.0-alpha.76",
     "@mui/material": "^5.6.0",
     "@mui/styles": "^5.6.0",
+    "@react-pdf-viewer/default-layout": "^3.7.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -25,26 +25,35 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-fontawesome": "^1.6.5",
     "@types/react-router-dom": "^5.3.3",
+    "@types/socket.io-client": "^3.0.0",
     "axios": "^0.27.0",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
     "clsx": "^1.1.1",
     "date-fns": "^2.28.0",
+    "flowbite-react": "^0.1.10",
     "font-awesome": "^4.7.0",
     "history": "^5.3.0",
     "material-ui": "^0.20.2",
+    "moment": "^2.29.4",
     "nprogress": "^0.2.0",
     "numeral": "^2.0.6",
+    "pdfjs-dist": "^2.6.347",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
+    "react-calendar": "^3.7.0",
     "react-chartjs-2": "^4.1.0",
     "react-custom-scrollbars-2": "^4.4.0",
     "react-dom": "^18.0.0",
     "react-helmet-async": "^1.2.3",
+    "react-icons": "^4.4.0",
     "react-notifications": "^1.7.3",
+    "react-pdf": "^5.7.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "save-dev": "^0.0.1-security",
+    "socket.io-client": "^4.5.1",
+    "styled-components": "^5.3.5",
     "stylis": "^4.1.0",
     "stylis-plugin-rtl": "^2.1.1",
     "typescript": "^4.6.3",
